--- a/src/main/resources/templates/YHPages/yhBoardPages/yhDetail.html
+++ b/src/main/resources/templates/YHPages/yhBoardPages/yhDetail.html
@@ -32,6 +32,82 @@
             <img th:src="@{|/upload/${fileName}}" width="200" height="200" alt="">
         </td>
     </tr>
+    <tr>
+        <th>수정</th>
+        <td>
+            <button onclick="req('update')">수정하기</button>
+        </td>
+    </tr>
+    <tr>
+        <th>삭제</th>
+        <td>
+            <button onclick="req('delete')">삭제하기</button>
+        </td>
+    </tr>
+
 </table>
+<div id="passwordArea" style="display: none">
+    <label for="passwordCheck">비밀번호: </label>
+    <input type="text" id="passwordCheck" name="passwordCheck">
+    <input type="button" onclick="passwordCheck()" value="비밀번호 확인">
+</div>
+<div id="updateArea"></div>
+
+<script>
+    let method = null
+    const req = (met) => {
+        const passwordArea = document.querySelector("#passwordArea");
+        const updateArea = document.querySelector("#updateArea");
+        passwordArea.style.display = "block";
+        method = met;
+        updateArea.innerHTML = "";
+    }
+
+
+    const passwordCheck = () => {
+        const passwordCheck = document.querySelector("#passwordCheck");
+        const boardPass = "[[${writerDTO.memberPassword}]]";
+        const boardWriter = "[[${writerDTO.memberName}]]";
+        const boardTitle = "[[${yhBoard.boardTitle}]]";
+        const boardContents = "[[${yhBoard.boardContents}]]";
+        const updateArea = document.querySelector("#updateArea");
+        console.log(method);
+        if (passwordCheck.value != boardPass) {
+            alert("비밀번호가 일치하지않습니다");
+        } else if (method == "update") {
+            let result = `<form id="boardUpdateForm" onsubmit="updateForm(event)" name="boardUpdateForm" action="/yhBoard/update" method="post">
+            <label for="boardWriter">작성자</label>
+            <input type="text" id="boardWriter" name="boardWriter" value="${boardWriter}"><br>
+            <label for="boardTitle">제목</label>
+            <input type="text" id="boardTitle" name="boardTitle" value="${boardTitle}"><br>
+            <label for="boardContents">내용</label>
+            <input type="text" id="boardContents" name="boardContents" value="${boardContents}"><br>
+            <label for="boardFile">파일첨부</label>
+            <input type="file" id="boardFile" name="boardFile" multiple><br>
+            <input type="submit" value="수정하기">
+            <input type="button" onclick="hiddenUpdate()" value="숨기기">
+        </form>`;
+            updateArea.innerHTML = result;
+        } else if (method == "delete") {
+        }
+    }
+    const updateForm = (event) => {
+        event.preventDefault();
+        const boardUpdateForm = document.querySelector("#boardUpdateForm");
+        const updateArea = document.querySelector("#updateArea");
+        if (confirm("정말로 진행하시겠습니까?")) {
+            alert("업데이트에 성공하셨습니다");
+            boardUpdateForm.submit();
+        } else {
+            updateArea.innerHTML = "";
+        }
+    }
+
+
+    const hiddenUpdate = () => {
+        const updateArea = document.querySelector("#updateArea");
+        updateArea.innerHTML = "";
+    }
+</script>
 </body>
 </html>
