--- a/src/main/resources/templates/JYPages/jyBoardPages/jyBoardPaging.html
+++ b/src/main/resources/templates/JYPages/jyBoardPages/jyBoardPaging.html
@@ -32,7 +32,7 @@
                 <tr th:each="board: ${boardList}">
                     <td th:text="${board.id}"></td>
                     <td th:text="${board.boardWriter}"></td>
-                    <td><a th:href="@{|/board/${board.id}?page=${boardList.number + 1}&type=${type}&q=${q}|}"
+                    <td><a th:href="@{|/jy/board/${board.id}?page=${boardList.number + 1}&type=${type}&q=${q}|}"
                            th:text="${board.boardTitle}">제목</a></td>
                     <td th:text="${board.createdAt}"></td>
                     <td th:text="${board.boardHits}"></td>
@@ -43,8 +43,8 @@
             <div class="container">
                 <ul class="pagination justify-content-center">
                     <li class="page-item">
-                        <!--첫페이지 요청 링크 /board?page=1 -->
-                        <a class="page-link" th:href="@{/board(page=1, type=${type}, q=${q})}">
+                        <!--첫페이지 요청 링크 /jy/board?page=1 -->
+                        <a class="page-link" th:href="@{/jy/board(page=1, type=${type}, q=${q})}">
                             <span>First</span>
                         </a>
                     </li>
@@ -53,8 +53,8 @@
                         <!--boardList.first: isFirst()
                             boardList.number: getNumber()-->
                         <a class="page-link"
-                           th:href="${boardList.first} ? '#' : @{/board(page=${boardList.number}, type=${type}, q=${q})}">
-                            <!-- 사용자 3페이지, number 2 /board?page=2 -->
+                           th:href="${boardList.first} ? '#' : @{/jy/board(page=${boardList.number}, type=${type}, q=${q})}">
+                            <!-- 사용자 3페이지, number 2 /jy/board?page=2 -->
                             <span><</span> <!-- < -->
                         </a>
                     </li>
@@ -64,7 +64,7 @@
                     <li th:each="page: ${#numbers.sequence(startPage, endPage)}"
                         th:class="${page == boardList.number + 1} ? 'page-item active'" class="page-item">
                         <a class="page-link" th:text="${page}"
-                           th:href="@{/board(page=${page}, type=${type}, q=${q})}"></a>
+                           th:href="@{/jy/board(page=${page}, type=${type}, q=${q})}"></a>
                     </li>
 
                     <!-- 다음 페이지 요청
@@ -73,14 +73,14 @@
                         따라서 4페이지를 보고 싶다면 getNumber()+2를 해야 컨트롤러에 4를 요청할 수 있음. -->
                     <li th:class="${boardList.last} ? 'disabled'">
                         <a class="page-link"
-                           th:href="${boardList.last} ? '#' : @{/board(page=${boardList.number + 2}, type=${type}, q=${q})}">
-                            <!-- 사용자 3페이지, number 2 /board?page=4 -->
+                           th:href="${boardList.last} ? '#' : @{/jy/board(page=${boardList.number + 2}, type=${type}, q=${q})}">
+                            <!-- 사용자 3페이지, number 2 /jy/board?page=4 -->
                             <span>&gt;</span>
                         </a>
                     </li>
 
                     <li class="page-item">
-                        <a class="page-link" th:href="@{/board(page=${boardList.totalPages}, type=${type}, q=${q})}">
+                        <a class="page-link" th:href="@{/jy/board(page=${boardList.totalPages}, type=${type}, q=${q})}">
                             <span>Last</span>
                         </a>
                     </li>
